Set max-width to ShowMore component to prevent table overflow on IE11

--- a/src/components/showMore/_show-more.scss
+++ b/src/components/showMore/_show-more.scss
@@ -7,6 +7,10 @@
     margin: 0;
   }
 
+  &.inside-table {
+    max-width: 200px;
+  }
+
   p {
     margin: 0;
     font-size: rem-calc(14px);
